RESOLVED FIXED11852
REGRESSION: <select disabled size="5"> listbox cannot be scrolled
https://bugs.webkit.org/show_bug.cgi?id=11852
Summary REGRESSION: <select disabled size="5"> listbox cannot be scrolled
Jesse Ruderman
Reported 2006-12-16 09:52:23 PST
This HTML results in an unscrollable listbox, so you can't see what the last few options are: <select disabled size="5"> <option>Option 1</option> <option>Option 2</option> <option>Option 3</option> <option>Option 4</option> <option>Option 5</option> <option>Option 6</option> <option>Option 7</option> <option>Option 8</option> </select> Bugzilla 3.0 was going to use <select disabled size="5"> for CC lists for logged-out users, but that will probably be changed before the release, so that users with the buggy versions of WebKit can see who is CC'ed. And IE users, if there are still any (IE has a similar bug). See https://bugzilla.mozilla.org/show_bug.cgi?id=364065. This bug happens on WebKit trunk, but not shipping Safari on Tiger.
Attachments
test case (259 bytes, text/html)
2007-02-12 11:48 PST, Antti Koivisto
no flags
always pass mouse press events to scrollbars (1.70 KB, patch)
2007-02-12 11:59 PST, Antti Koivisto
mjs: review+
Mark Rowe (bdash)
Comment 1 2007-01-28 16:04:48 PST
Antti Koivisto
Comment 2 2007-02-12 11:48:44 PST
Created attachment 13136 [details] test case
Antti Koivisto
Comment 3 2007-02-12 11:59:04 PST
Created attachment 13137 [details] always pass mouse press events to scrollbars No layout test, clicking scrollbars using DumpRenderTree eventSender does not work (view is always null in passMouseDownEventToWidget in EventHandlerMac.mm).
Maciej Stachowiak
Comment 4 2007-02-12 15:03:01 PST
Comment on attachment 13137 [details] always pass mouse press events to scrollbars r=me
Antti Koivisto
Comment 5 2007-02-13 01:06:11 PST
Note You need to log in before you can comment on or make changes to this bug.