        Reviewed by Maciej.

-fix REGRESSION: <select disabled size="5"> listbox cannot be scrolled
        http://bugs.webkit.org/show_bug.cgi?id=11852
        <rdar://problem/4960129>

        Pass mouse press events to scrollbars even if event is swallowed.

        No layout test, DumpRenderTree eventSender can't hit scrollbars.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleMousePressEvent):



Canonical link: https://commits.webkit.org/16474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19596 268f45cc-cd09-0410-ab3c-d52691b4dbfc